# spoticron

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  GITHUB_SETUP.md  LICENSE  Makefile  README.md  activate.sh  pyproject.toml  requirements-dev.txt  requirements.txt  spoticron.py  test_export_fix.py
.github/workflows/: ci.yml
config/: app_config.json
docs/: AUDIO_FEATURES_NOTE.md  BRANDING.md
src/: __init__.py  auth.py  data_storage.py  historical_stats.py  live_stats.py  utils.py
tests/: conftest.py  test_spoticron.py
